// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Ячейки/ButtonsCell Метаданные 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      className="breadcrumb"
    >
      <li
        className="breadcrumb-item active"
      >
        Ячейки
      </li>
      <li
        className="breadcrumb-item active"
      >
        ButtonsCell
      </li>
      <li
        className="breadcrumb-item active"
      >
        Метаданные
      </li>
    </ol>
  </nav>
  <Card
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
      }
    }
    tag="div"
  >
    <CardBody
      style={
        Object {
          "flexBasis": "auto",
          "flexGrow": 1,
          "minWidth": "90%",
        }
      }
      tag="div"
    >
      <IntlProvider
        locale="ru"
        messages={Object {}}
      >
        <Provider
          store={
            Object {
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
              Symbol(observable): [Function],
            }
          }
        >
          <withContext(SecurityProvider)
            authProvider={[Function]}
            redirectPath="/login"
          >
            <FactoryProvider
              config={
                Object {
                  "actions": Object {
                    "dummyImpl": [Function],
                    "exportTable": [Function],
                    "link": [Function],
                    "perform": [Function],
                  },
                  "cells": Object {
                    "BadgeCell": [Function],
                    "ButtonsCell": [Function],
                    "CheckboxCell": [Function],
                    "CollapsedCell": [Function],
                    "EditableCell": [Function],
                    "IconCell": [Function],
                    "ImageCell": [Function],
                    "LinkCell": [Function],
                    "ProgressBarCell": [Function],
                    "TextCell": [Function],
                  },
                  "controls": Object {
                    "AutoComplete": [Function],
                    "ButtonUploader": [Function],
                    "Checkbox": [Function],
                    "CheckboxGroup": [Function],
                    "CodeEditor": [Function],
                    "DateInterval": [Function],
                    "DatePicker": [Function],
                    "DropZone": [Function],
                    "Html": [Function],
                    "InputHidden": [Function],
                    "InputMask": [Function],
                    "InputMoney": [Function],
                    "InputNumber": [Function],
                    "InputSelect": [Function],
                    "InputSelectTree": [Function],
                    "InputText": [Function],
                    "N2OSelect": [Function],
                    "OutputText": [Function],
                    "PasswordInput": [Function],
                    "Pills": [Function],
                    "RadioGroup": [Function],
                    "Rating": [Function],
                    "Select": [Function],
                    "Slider": [Function],
                    "Switch": [Function],
                    "TextArea": [Function],
                    "TextEditor": [Function],
                  },
                  "fields": Object {
                    "FilterButtonsField": [Function],
                    "RangeField": [Function],
                    "StandardField": [Function],
                    "TextField": [Function],
                  },
                  "fieldsets": Object {
                    "CollapseFieldset": [Function],
                    "LineFieldset": [Function],
                    "StandardFieldset": [Function],
                    "TitleFieldset": [Function],
                  },
                  "headers": Object {
                    "TextTableHeader": [Function],
                  },
                  "layouts": Object {
                    "LeftRightLayout": [Function],
                    "LeftTopBottomLayout": [Function],
                    "SingleLayout": [Function],
                    "TopBottomLayout": [Function],
                  },
                  "regions": Object {
                    "ListRegion": [Function],
                    "NoneRegion": [Function],
                    "PanelRegion": [Function],
                    "TabsRegion": [Function],
                  },
                  "snippets": Object {
                    "Alert": [Function],
                    "Collapse": [Function],
                    "Icon": [Function],
                    "Panel": [Function],
                    "Paragraph": [Function],
                    "PopoverConfirm": [Function],
                    "Spinner": [Function],
                    "Text": [Function],
                    "Title": [Function],
                    "Wireframe": [Function],
                  },
                  "widgets": Object {
                    "AdvancedTableWidget": [Function],
                    "ChartWidget": [Function],
                    "EditForm": [Function],
                    "FormWidget": [Function],
                    "HtmlWidget": [Function],
                    "ListWidget": [Function],
                    "TableWidget": [Function],
                    "TreeWidget": [Function],
                    "WireframeWidget": [Function],
                  },
                }
              }
              securityBlackList={Array []}
            >
              <Connect(ConnectedRouter)
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "key": "zybh0s",
                        "pathname": "/",
                        "search": "",
                        "state": undefined,
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 1,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "key": "zybh0s",
                      "pathname": "/",
                      "search": "",
                      "state": undefined,
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
              >
                <div>
                  <Story
                    PropTable={[Function]}
                    components={
                      Object {
                        "a": [Function],
                        "code": [Function],
                        "h1": [Function],
                        "h2": [Function],
                        "h3": [Function],
                        "h4": [Function],
                        "h5": [Function],
                        "h6": [Function],
                        "li": [Function],
                        "p": [Function],
                        "ul": [Function],
                      }
                    }
                    context={
                      Object {
                        "hooks": HooksContext {
                          "currentContext": [Circular],
                          "currentDecoratorName": null,
                          "currentEffects": Array [],
                          "currentHooks": Array [],
                          "currentPhase": "NONE",
                          "hasUpdates": false,
                          "hookListsMap": WeakMap {},
                          "mountedDecorators": Set {
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                          },
                          "nextHookIndex": 0,
                          "prevEffects": Array [],
                          "prevMountedDecorators": Set {},
                          "renderListener": [Function],
                        },
                        "id": "ячейки-buttonscell--метаданные",
                        "kind": "Ячейки/ButtonsCell",
                        "name": "Метаданные",
                        "parameters": Object {
                          "fileName": "C:\\\\Users\\\\sliskov\\\\Projects\\\\n2o-new\\\\frontend\\\\n2o\\\\src\\\\components\\\\widgets\\\\Table\\\\cells\\\\ButtonsCell\\\\ButtonsCell.story.js",
                          "framework": "react",
                          "info": Object {
                            "propTables": Array [
                              [Function],
                            ],
                            "propTablesExclude": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                          },
                          "options": Object {
                            "hierarchyRootSeparator": "|",
                            "hierarchySeparator": /\\\\/\\|\\\\\\./,
                          },
                        },
                        "story": "Метаданные",
                      }
                    }
                    excludedPropTypes={Array []}
                    info=""
                    maxPropArrayLength={3}
                    maxPropObjectKeys={3}
                    maxPropStringLength={50}
                    maxPropsIntoLine={3}
                    propTableCompare={[Function]}
                    propTables={
                      Array [
                        [Function],
                      ]
                    }
                    propTablesExclude={
                      Array [
                        [Function],
                        [Function],
                        [Function],
                        [Function],
                      ]
                    }
                    showHeader={true}
                    showInline={true}
                    showSource={false}
                    styles={[Function]}
                  >
                    <div>
                      <small>
                        Введите 
                        <mark>
                          admin
                        </mark>
                        , чтобы увидеть скрытый кнопку в ячейке
                      </small>
                      <Connect(AuthButton) />
                      <br />
                      <Table
                        cells={
                          Array [
                            Object {
                              "component": [Function],
                              "id": "description",
                              "style": Object {
                                "width": "200px",
                              },
                            },
                            Object {
                              "buttons": Array [
                                Object {
                                  "action": Object {
                                    "options": Object {
                                      "testProp": "testValueProp",
                                    },
                                    "src": "dummyImpl",
                                  },
                                  "color": "primary",
                                  "disabled": false,
                                  "hint": "Подсказка",
                                  "icon": "fa fa-vk",
                                  "size": "md",
                                  "title": "Кнопка",
                                  "visible": true,
                                },
                                Object {
                                  "color": "success",
                                  "security": Object {
                                    "roles": Array [
                                      "admin",
                                    ],
                                  },
                                  "title": "Скрытая кнопка",
                                },
                                Object {
                                  "color": "warning",
                                  "security": Object {
                                    "roles": Array [
                                      "admin",
                                    ],
                                  },
                                  "subMenu": Array [
                                    Object {
                                      "title": "Элемент 1",
                                    },
                                  ],
                                  "title": "Скрытый dropdown",
                                },
                                Object {
                                  "color": "secondary",
                                  "subMenu": Array [
                                    Object {
                                      "title": "Элемент 1 (не скрыт)",
                                    },
                                    Object {
                                      "security": Object {
                                        "roles": Array [
                                          "admin",
                                        ],
                                      },
                                      "title": "Элемент 2 (скрыт)",
                                    },
                                  ],
                                  "title": "Еще",
                                },
                              ],
                              "component": [Function],
                              "fieldKey": "buttonCells",
                              "id": "buttonCells",
                            },
                          ]
                        }
                        datasource={
                          Array [
                            Object {
                              "description": "Кнопки",
                            },
                          ]
                        }
                        headers={
                          Array [
                            Object {
                              "component": [Function],
                              "id": "description",
                              "label": "Свойства",
                            },
                            Object {
                              "component": [Function],
                              "id": "buttonCells",
                              "label": "Отображение",
                            },
                          ]
                        }
                        onResolve={[Function]}
                        onRowClickAction={[Function]}
                        redux={true}
                        sorting={Object {}}
                      />
                    </div>
                  </Story>
                  <withContext(Connect(ModalPages)) />
                </div>
              </Connect(ConnectedRouter)>
            </FactoryProvider>
          </withContext(SecurityProvider)>
        </Provider>
      </IntlProvider>
    </CardBody>
  </Card>
</div>
`;

exports[`Storyshots Ячейки/ButtonsCell Примеры 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      className="breadcrumb"
    >
      <li
        className="breadcrumb-item active"
      >
        Ячейки
      </li>
      <li
        className="breadcrumb-item active"
      >
        ButtonsCell
      </li>
      <li
        className="breadcrumb-item active"
      >
        Примеры
      </li>
    </ol>
  </nav>
  <Card
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
      }
    }
    tag="div"
  >
    <CardBody
      style={
        Object {
          "flexBasis": "auto",
          "flexGrow": 1,
          "minWidth": "90%",
        }
      }
      tag="div"
    >
      <IntlProvider
        locale="ru"
        messages={Object {}}
      >
        <Provider
          store={
            Object {
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
              Symbol(observable): [Function],
            }
          }
        >
          <withContext(SecurityProvider)
            authProvider={[Function]}
            redirectPath="/login"
          >
            <FactoryProvider
              config={
                Object {
                  "actions": Object {
                    "dummyImpl": [Function],
                    "exportTable": [Function],
                    "link": [Function],
                    "perform": [Function],
                  },
                  "cells": Object {
                    "BadgeCell": [Function],
                    "ButtonsCell": [Function],
                    "CheckboxCell": [Function],
                    "CollapsedCell": [Function],
                    "EditableCell": [Function],
                    "IconCell": [Function],
                    "ImageCell": [Function],
                    "LinkCell": [Function],
                    "ProgressBarCell": [Function],
                    "TextCell": [Function],
                  },
                  "controls": Object {
                    "AutoComplete": [Function],
                    "ButtonUploader": [Function],
                    "Checkbox": [Function],
                    "CheckboxGroup": [Function],
                    "CodeEditor": [Function],
                    "DateInterval": [Function],
                    "DatePicker": [Function],
                    "DropZone": [Function],
                    "Html": [Function],
                    "InputHidden": [Function],
                    "InputMask": [Function],
                    "InputMoney": [Function],
                    "InputNumber": [Function],
                    "InputSelect": [Function],
                    "InputSelectTree": [Function],
                    "InputText": [Function],
                    "N2OSelect": [Function],
                    "OutputText": [Function],
                    "PasswordInput": [Function],
                    "Pills": [Function],
                    "RadioGroup": [Function],
                    "Rating": [Function],
                    "Select": [Function],
                    "Slider": [Function],
                    "Switch": [Function],
                    "TextArea": [Function],
                    "TextEditor": [Function],
                  },
                  "fields": Object {
                    "FilterButtonsField": [Function],
                    "RangeField": [Function],
                    "StandardField": [Function],
                    "TextField": [Function],
                  },
                  "fieldsets": Object {
                    "CollapseFieldset": [Function],
                    "LineFieldset": [Function],
                    "StandardFieldset": [Function],
                    "TitleFieldset": [Function],
                  },
                  "headers": Object {
                    "TextTableHeader": [Function],
                  },
                  "layouts": Object {
                    "LeftRightLayout": [Function],
                    "LeftTopBottomLayout": [Function],
                    "SingleLayout": [Function],
                    "TopBottomLayout": [Function],
                  },
                  "regions": Object {
                    "ListRegion": [Function],
                    "NoneRegion": [Function],
                    "PanelRegion": [Function],
                    "TabsRegion": [Function],
                  },
                  "snippets": Object {
                    "Alert": [Function],
                    "Collapse": [Function],
                    "Icon": [Function],
                    "Panel": [Function],
                    "Paragraph": [Function],
                    "PopoverConfirm": [Function],
                    "Spinner": [Function],
                    "Text": [Function],
                    "Title": [Function],
                    "Wireframe": [Function],
                  },
                  "widgets": Object {
                    "AdvancedTableWidget": [Function],
                    "ChartWidget": [Function],
                    "EditForm": [Function],
                    "FormWidget": [Function],
                    "HtmlWidget": [Function],
                    "ListWidget": [Function],
                    "TableWidget": [Function],
                    "TreeWidget": [Function],
                    "WireframeWidget": [Function],
                  },
                }
              }
              securityBlackList={Array []}
            >
              <Connect(ConnectedRouter)
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "key": "zybh0s",
                        "pathname": "/",
                        "search": "",
                        "state": undefined,
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 1,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "key": "zybh0s",
                      "pathname": "/",
                      "search": "",
                      "state": undefined,
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
              >
                <div>
                  <Story
                    PropTable={[Function]}
                    components={
                      Object {
                        "a": [Function],
                        "code": [Function],
                        "h1": [Function],
                        "h2": [Function],
                        "h3": [Function],
                        "h4": [Function],
                        "h5": [Function],
                        "h6": [Function],
                        "li": [Function],
                        "p": [Function],
                        "ul": [Function],
                      }
                    }
                    context={
                      Object {
                        "hooks": HooksContext {
                          "currentContext": [Circular],
                          "currentDecoratorName": null,
                          "currentEffects": Array [],
                          "currentHooks": Array [],
                          "currentPhase": "NONE",
                          "hasUpdates": false,
                          "hookListsMap": WeakMap {},
                          "mountedDecorators": Set {
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                          },
                          "nextHookIndex": 0,
                          "prevEffects": Array [],
                          "prevMountedDecorators": Set {},
                          "renderListener": [Function],
                        },
                        "id": "ячейки-buttonscell--примеры",
                        "kind": "Ячейки/ButtonsCell",
                        "name": "Примеры",
                        "parameters": Object {
                          "fileName": "C:\\\\Users\\\\sliskov\\\\Projects\\\\n2o-new\\\\frontend\\\\n2o\\\\src\\\\components\\\\widgets\\\\Table\\\\cells\\\\ButtonsCell\\\\ButtonsCell.story.js",
                          "framework": "react",
                          "info": Object {
                            "propTables": Array [
                              [Function],
                            ],
                            "propTablesExclude": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                          },
                          "options": Object {
                            "hierarchyRootSeparator": "|",
                            "hierarchySeparator": /\\\\/\\|\\\\\\./,
                          },
                        },
                        "story": "Примеры",
                      }
                    }
                    excludedPropTypes={Array []}
                    info=""
                    maxPropArrayLength={3}
                    maxPropObjectKeys={3}
                    maxPropStringLength={50}
                    maxPropsIntoLine={3}
                    propTableCompare={[Function]}
                    propTables={
                      Array [
                        [Function],
                      ]
                    }
                    propTablesExclude={
                      Array [
                        [Function],
                        [Function],
                        [Function],
                        [Function],
                      ]
                    }
                    showHeader={true}
                    showInline={true}
                    showSource={false}
                    styles={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "paddingBottom": 50,
                        }
                      }
                    >
                      <Table
                        cells={
                          Array [
                            Object {
                              "component": [Function],
                              "id": "description",
                              "style": Object {
                                "width": "200px",
                              },
                            },
                            Object {
                              "buttons": Array [
                                Object {
                                  "color": "primary",
                                  "hint": "Первая",
                                  "id": "1",
                                  "size": "md",
                                  "title": "Первая",
                                },
                                Object {
                                  "color": "secondary",
                                  "hint": "Вторая",
                                  "id": "2",
                                  "size": "md",
                                  "title": "Вторая",
                                },
                                Object {
                                  "color": "warning",
                                  "hint": "Третья",
                                  "id": "3",
                                  "size": "md",
                                  "title": "Третья",
                                },
                              ],
                              "component": [Function],
                              "fieldKey": "buttonCells",
                              "id": "buttonCells",
                            },
                          ]
                        }
                        datasource={
                          Array [
                            Object {
                              "description": "Кнопки",
                            },
                          ]
                        }
                        headers={
                          Array [
                            Object {
                              "component": [Function],
                              "id": "description",
                              "label": "Свойства",
                            },
                            Object {
                              "component": [Function],
                              "id": "buttonCells",
                              "label": "Отображение",
                            },
                          ]
                        }
                        onResolve={[Function]}
                        onRowClickAction={[Function]}
                        redux={true}
                        sorting={Object {}}
                      />
                      <Table
                        cells={
                          Array [
                            Object {
                              "component": [Function],
                              "id": "description",
                              "style": Object {
                                "width": "200px",
                              },
                            },
                            Object {
                              "buttons": Array [
                                Object {
                                  "hint": "Первая",
                                  "id": "4",
                                  "size": "md",
                                  "title": "Первая",
                                },
                                Object {
                                  "hint": "Вторая",
                                  "id": "5",
                                  "size": "md",
                                  "title": "Вторая",
                                },
                                Object {
                                  "hint": "Третья",
                                  "id": "6",
                                  "size": "md",
                                  "title": "Третья",
                                },
                              ],
                              "component": [Function],
                              "fieldKey": "buttonCells",
                              "id": "buttonCells",
                            },
                          ]
                        }
                        datasource={
                          Array [
                            Object {
                              "description": "Кнопки в виде ссылок",
                            },
                          ]
                        }
                        headers={
                          Array [
                            Object {
                              "component": [Function],
                              "id": "description",
                              "label": "Свойства",
                            },
                            Object {
                              "component": [Function],
                              "id": "buttonCells",
                              "label": "Отображение",
                            },
                          ]
                        }
                        onResolve={[Function]}
                        onRowClickAction={[Function]}
                        redux={true}
                        sorting={Object {}}
                      />
                      <Table
                        cells={
                          Array [
                            Object {
                              "component": [Function],
                              "id": "description",
                              "style": Object {
                                "width": "200px",
                              },
                            },
                            Object {
                              "buttons": Array [
                                Object {
                                  "color": "primary",
                                  "hint": "Первая",
                                  "icon": "fa fa-telegram",
                                  "id": "7",
                                  "size": "md",
                                  "title": "Первая",
                                },
                                Object {
                                  "color": "secondary",
                                  "hint": "Вторая",
                                  "icon": "fa fa-vk",
                                  "id": "8",
                                  "size": "md",
                                  "title": "Вторая",
                                },
                                Object {
                                  "color": "warning",
                                  "hint": "Третья",
                                  "icon": "fa fa-facebook",
                                  "id": "9",
                                  "size": "md",
                                  "title": "Третья",
                                },
                              ],
                              "component": [Function],
                              "fieldKey": "buttonCells",
                              "id": "buttonCells",
                            },
                          ]
                        }
                        datasource={
                          Array [
                            Object {
                              "description": "Кнопки с иконками",
                            },
                          ]
                        }
                        headers={
                          Array [
                            Object {
                              "component": [Function],
                              "id": "description",
                              "label": "Свойства",
                            },
                            Object {
                              "component": [Function],
                              "id": "buttonCells",
                              "label": "Отображение",
                            },
                          ]
                        }
                        onResolve={[Function]}
                        onRowClickAction={[Function]}
                        redux={true}
                        sorting={Object {}}
                      />
                      <Table
                        cells={
                          Array [
                            Object {
                              "component": [Function],
                              "id": "description",
                              "style": Object {
                                "width": "200px",
                              },
                            },
                            Object {
                              "buttons": Array [
                                Object {
                                  "hint": "Первая",
                                  "icon": "fa fa-telegram",
                                  "id": "10",
                                  "size": "md",
                                  "title": "Первая",
                                },
                                Object {
                                  "hint": "Вторая",
                                  "icon": "fa fa-vk",
                                  "id": "11",
                                  "size": "md",
                                  "title": "Вторая",
                                },
                                Object {
                                  "hint": "Третья",
                                  "icon": "fa fa-facebook",
                                  "id": "12",
                                  "size": "md",
                                  "title": "Третья",
                                },
                              ],
                              "component": [Function],
                              "fieldKey": "buttonCells",
                              "id": "buttonCells",
                            },
                          ]
                        }
                        datasource={
                          Array [
                            Object {
                              "description": "Кнопки в виде ссылок с иконками",
                            },
                          ]
                        }
                        headers={
                          Array [
                            Object {
                              "component": [Function],
                              "id": "description",
                              "label": "Свойства",
                            },
                            Object {
                              "component": [Function],
                              "id": "buttonCells",
                              "label": "Отображение",
                            },
                          ]
                        }
                        onResolve={[Function]}
                        onRowClickAction={[Function]}
                        redux={true}
                        sorting={Object {}}
                      />
                      <Table
                        cells={
                          Array [
                            Object {
                              "component": [Function],
                              "id": "description",
                              "style": Object {
                                "width": "200px",
                              },
                            },
                            Object {
                              "buttons": Array [
                                Object {
                                  "color": "primary",
                                  "hint": "Первая",
                                  "icon": "",
                                  "id": "13",
                                  "title": "Первая",
                                },
                                Object {
                                  "color": "danger",
                                  "hint": "Вторая",
                                  "icon": "",
                                  "id": "14",
                                  "subMenu": Array [
                                    Object {
                                      "color": "primary",
                                      "icon": "",
                                      "id": "15",
                                      "title": "Первый",
                                    },
                                    Object {
                                      "icon": "",
                                      "id": "16",
                                      "title": "Второй",
                                    },
                                  ],
                                  "title": "Вторая",
                                },
                              ],
                              "component": [Function],
                              "fieldKey": "buttonCells",
                              "id": "buttonCells",
                            },
                          ]
                        }
                        datasource={
                          Array [
                            Object {
                              "description": "Кнопка с выпадающим списком",
                            },
                          ]
                        }
                        headers={
                          Array [
                            Object {
                              "component": [Function],
                              "id": "description",
                              "label": "Свойства",
                            },
                            Object {
                              "component": [Function],
                              "id": "buttonCells",
                              "label": "Отображение",
                            },
                          ]
                        }
                        onResolve={[Function]}
                        onRowClickAction={[Function]}
                        redux={true}
                        sorting={Object {}}
                      />
                      <Table
                        cells={
                          Array [
                            Object {
                              "component": [Function],
                              "id": "description",
                              "style": Object {
                                "width": "200px",
                              },
                            },
                            Object {
                              "buttons": Array [
                                Object {
                                  "hint": "Первая",
                                  "icon": "",
                                  "id": "17",
                                  "title": "Первая",
                                },
                                Object {
                                  "hint": "Вторая",
                                  "icon": "",
                                  "id": "18",
                                  "subMenu": Array [
                                    Object {
                                      "icon": "",
                                      "id": "19",
                                      "title": "Первый",
                                    },
                                    Object {
                                      "id": "20",
                                      "title": "Второй",
                                    },
                                  ],
                                  "title": "Вторая",
                                },
                                Object {
                                  "hint": "Третья",
                                  "icon": "fa fa-vk",
                                  "id": "21",
                                  "title": "Третья",
                                },
                              ],
                              "component": [Function],
                              "fieldKey": "buttonCells",
                              "id": "buttonCells",
                            },
                          ]
                        }
                        datasource={
                          Array [
                            Object {
                              "description": "Кнопки в виде ссылок с выпадающим списком",
                            },
                          ]
                        }
                        headers={
                          Array [
                            Object {
                              "component": [Function],
                              "id": "description",
                              "label": "Свойства",
                            },
                            Object {
                              "component": [Function],
                              "id": "buttonCells",
                              "label": "Отображение",
                            },
                          ]
                        }
                        onResolve={[Function]}
                        onRowClickAction={[Function]}
                        redux={true}
                        sorting={Object {}}
                      />
                      <Table
                        cells={
                          Array [
                            Object {
                              "component": [Function],
                              "id": "description",
                              "style": Object {
                                "width": "200px",
                              },
                            },
                            Object {
                              "buttons": Array [
                                Object {
                                  "hint": "Вторая",
                                  "icon": "fa fa-vk",
                                  "id": "22",
                                  "subMenu": Array [
                                    Object {
                                      "header": true,
                                      "id": "23",
                                      "title": "Заголовок",
                                    },
                                    Object {
                                      "divider": true,
                                      "id": "24",
                                    },
                                    Object {
                                      "icon": "fa fa-telegram",
                                      "id": "25",
                                      "title": "С иконкой",
                                    },
                                  ],
                                  "title": "Вторая",
                                },
                              ],
                              "component": [Function],
                              "fieldKey": "buttonCells",
                              "id": "buttonCells",
                            },
                          ]
                        }
                        datasource={
                          Array [
                            Object {
                              "description": "Использование разделителей, заголовок и иконок в выпадающем списке",
                            },
                          ]
                        }
                        headers={
                          Array [
                            Object {
                              "component": [Function],
                              "id": "description",
                              "label": "Свойства",
                            },
                            Object {
                              "component": [Function],
                              "id": "buttonCells",
                              "label": "Отображение",
                            },
                          ]
                        }
                        onResolve={[Function]}
                        onRowClickAction={[Function]}
                        redux={true}
                        sorting={Object {}}
                      />
                      <Table
                        cells={
                          Array [
                            Object {
                              "component": [Function],
                              "id": "description",
                              "style": Object {
                                "width": "200px",
                              },
                            },
                            Object {
                              "buttons": Array [
                                Object {
                                  "hint": "Left",
                                  "hintPosition": "left",
                                  "id": "Left21",
                                  "title": "Left",
                                },
                                Object {
                                  "hint": "Right",
                                  "hintPosition": "right",
                                  "id": "Right21",
                                  "title": "Right",
                                },
                                Object {
                                  "hint": "Top",
                                  "hintPosition": "top",
                                  "id": "Top21",
                                  "title": "Top",
                                },
                                Object {
                                  "hint": "Bottom",
                                  "hintPosition": "bottom",
                                  "id": "Bottom21",
                                  "title": "Bottom",
                                },
                                Object {
                                  "hint": "Left",
                                  "hintPosition": "left",
                                  "icon": "fa fa-vk",
                                  "id": "Left22",
                                  "subMenu": Array [
                                    Object {
                                      "header": true,
                                      "id": "23",
                                      "title": "Заголовок",
                                    },
                                  ],
                                  "title": "Left",
                                },
                                Object {
                                  "hint": "Right",
                                  "hintPosition": "right",
                                  "icon": "fa fa-vk",
                                  "id": "Right22",
                                  "subMenu": Array [
                                    Object {
                                      "header": true,
                                      "id": "23",
                                      "title": "Заголовок",
                                    },
                                  ],
                                  "title": "Right",
                                },
                                Object {
                                  "hint": "Top",
                                  "hintPosition": "top",
                                  "icon": "fa fa-vk",
                                  "id": "Top22",
                                  "subMenu": Array [
                                    Object {
                                      "header": true,
                                      "id": "23",
                                      "title": "Заголовок",
                                    },
                                  ],
                                  "title": "Top",
                                },
                                Object {
                                  "hint": "Bottom",
                                  "hintPosition": "bottom",
                                  "icon": "fa fa-vk",
                                  "id": "Bottom22",
                                  "subMenu": Array [
                                    Object {
                                      "header": true,
                                      "id": "23",
                                      "title": "Заголовок",
                                    },
                                  ],
                                  "title": "Bottom",
                                },
                              ],
                              "component": [Function],
                              "fieldKey": "buttonCells",
                              "id": "buttonCells",
                            },
                          ]
                        }
                        datasource={
                          Array [
                            Object {
                              "description": "Позиция тултипа",
                            },
                          ]
                        }
                        headers={
                          Array [
                            Object {
                              "component": [Function],
                              "id": "description",
                              "label": "Свойства",
                            },
                            Object {
                              "component": [Function],
                              "id": "buttonCells",
                              "label": "Отображение",
                            },
                          ]
                        }
                        onResolve={[Function]}
                        onRowClickAction={[Function]}
                        redux={true}
                        sorting={Object {}}
                      />
                      <Table
                        cells={
                          Array [
                            Object {
                              "component": [Function],
                              "id": "description",
                              "style": Object {
                                "width": "200px",
                              },
                            },
                            Object {
                              "buttons": Array [
                                Object {
                                  "icon": "fa fa-vk",
                                  "id": "26",
                                  "subMenu": Array [
                                    Object {
                                      "header": true,
                                      "id": "27",
                                      "title": "Модальное окно",
                                    },
                                    Object {
                                      "divider": true,
                                      "id": "28",
                                    },
                                    Object {
                                      "action": Object {
                                        "options": Object {
                                          "payload": Object {
                                            "closeButton": true,
                                            "pageId": "undefined",
                                            "pageUrl": "/page/widget/create",
                                            "size": "sm",
                                            "title": "Новое модальное окно",
                                            "visible": true,
                                          },
                                          "type": "n2o/modals/INSERT",
                                        },
                                        "src": "perform",
                                      },
                                      "id": "29",
                                      "title": "Открыть",
                                    },
                                  ],
                                  "title": "Действие",
                                },
                              ],
                              "component": [Function],
                              "fieldKey": "buttonCells",
                              "id": "buttonCells",
                            },
                          ]
                        }
                        datasource={
                          Array [
                            Object {
                              "description": "Вызов действия",
                            },
                          ]
                        }
                        headers={
                          Array [
                            Object {
                              "component": [Function],
                              "id": "description",
                              "label": "Свойства",
                            },
                            Object {
                              "component": [Function],
                              "id": "buttonCells",
                              "label": "Отображение",
                            },
                          ]
                        }
                        onResolve={[Function]}
                        onRowClickAction={[Function]}
                        redux={true}
                        sorting={Object {}}
                      />
                    </div>
                  </Story>
                  <withContext(Connect(ModalPages)) />
                </div>
              </Connect(ConnectedRouter)>
            </FactoryProvider>
          </withContext(SecurityProvider)>
        </Provider>
      </IntlProvider>
    </CardBody>
  </Card>
</div>
`;
